kubernetes/config/03-x0-app-test/03-x0-app-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: x0-app-deployment
  labels:
    app: x0
  namespace: x0-test
spec:
  replicas: 2
  selector:
    matchLabels:
      app: x0
  template:
    metadata:
      labels:
        app: x0
    spec:
      containers:
      - name: x0
        image: clauspruefer/x0-app
        resources:
          requests:
            cpu: 500m
            memory: 1024Mi
