kubernetes/config/03-x0-app-test/04-x0-app-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: x0-app-svc
  namespace: x0-test
spec:
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: x0
  type: ClusterIP
