kubernetes/config/03-x0-app-test/05-x0-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: x0-app-tls-ingress
  namespace: x0-test
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/issuer: "letsencrypt-staging"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - host.non-existent-domain.com
    secretName: x0-app-tls
  rules:
  - host: host.non-existent-domain.com
    http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: x0-app-svc
              port:
                number: 80
